# GigaAMGUI

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CREDITS.md  DEPLOYMENT_GUIDE.md  Dockerfile  FEATURES_SUMMARY.md  FIX_SERVICE.md  GITHUB_RELEASE_CHECKLIST.md  PLAN.md  README.md  README_EN.md  SETUP.md  api.py  app.py  app_cli.py  build_exe.bat  build_exe_mac.sh  build_exe_portable.bat  cli.py  docker-compose.yml  docker-entrypoint.sh  download_models.py  fix_service.sh  gigaam_app.spec  gigaam_app_5k.spec  gigaam_app_5k_onefile.spec  gigaam_app_gpu.spec  gigaam_app_gpu_onefile.spec  gigaam_app_mac.spec  gigaam_app_onefile.spec  gigaam_app_portable.spec  pyproject.toml  requirements-dev.txt  requirements-legacy-pytorch.txt  (+6 more)
.github/: pull_request_template.md
assets/: icon.icns
deploy/: install_api.sh
docs/: API.md  API_GUIDE.md  API_QUICKSTART.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CLI_GUIDE.md  INSTALL_LINUX.md  INSTALL_MACOS.md  INSTALL_WINDOWS.md  LOGGING.md  QUICK_START.md  RELEASE_NOTES_1.3.1.md  RELEASE_NOTES_1.3.2.md  RELEASE_NOTES_1.3.3.md  RELEASE_NOTES_1.3.5.md  RELEASE_NOTES_1.3.6.md  RELEASE_NOTES_1.3.7.md  TROUBLESHOOTING.md
packaging/: _spec_common.py  build_exe.bat  build_exe_mac.sh  build_exe_portable.bat  gigaam_app.spec  gigaam_app_5k.spec  gigaam_app_5k_onefile.spec  gigaam_app_gpu.spec  gigaam_app_gpu_onefile.spec  gigaam_app_mac.spec  gigaam_app_onefile.spec  gigaam_app_portable.spec
pyinstaller_hooks/: hook-docx.py  hook-nemo.py  (+4 more)
tui/: Cargo.toml
tui/src/: main.rs
(+189 files in other folders)
