[package]
name = "gigaam-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for GigaAM Transcriber"

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
ratatui-image = { version = "8.0.1", default-features = false, features = ["crossterm", "image-defaults"] }
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
